# simple_maze

./: README.md  main.py  pyproject.toml
examples/: maze_example.ipynb
src/simple_maze/: __init__.py  generator.py  render.py  solver.py
src/squared_maze/: __init__.py  render.py
